--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-inlinesvg": "^3.0.2",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
     "styled-components": "^5.3.11",
     "styled-reset": "^4.4.7",
     "web-vitals": "^2.1.4"
