--- a/project/package.json
+++ b/project/package.json
@@ -1,16 +1,24 @@
 {
-  "name": "project",
+  "homepage": "https://frontendschool5.github.io/final-02-Ta-dak_Ta-dak/",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-inlinesvg": "^3.0.2",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
+    "styled-components": "^5.3.11",
+    "styled-reset": "^4.4.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -19,7 +27,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "serve": "serve -s build",
-    "build-and-serve": "npm run build && npm run serve"
+    "build-and-serve": "npm run build && npm run serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
